<resources>
    <string name="app_name">TycoonGameV3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Start Game</string>
    <string name="previous">Previous</string>
    <string name="title">Tech Scam</string>
    <string name="start_game_button_description">Start Game Switch</string>
    <string name="title_description">Description Placeholder</string>
    <string name="filler">Lorem ipsum</string>
    <string name="managers">Managers</string>
    <string name="upgrades">Upgrades</string>
    <string name="prestige">Prestige</string>
    <string name="manager_description">Hire a manager to automate your businesses!</string>
    <string name="filler_money">$0.00</string>
    <string name="managers_title">Managers</string>
    <string name="upgrade_description">Buy an upgrade to make your businesses more profitable!</string>
    <string name="upgrades_title">Upgrades</string>
</resources>